--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
+.app {
+  top: 50%;
+  right: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.but {
+  background: #23c7c7;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.fixContainer {
+  width: 1300px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.error,
+.outBalance {
+  margin: 5px 0;
+  text-align: center;
+}
+.error {
+  font-size: 8px;
+}
+.outBalance {
+  font-size: 12px;
 }
