--- a/src/Components/Reels/Reels.module.css
+++ b/src/Components/Reels/Reels.module.css
@@ -1,3 +1,58 @@
 .container {
   width: 1300px;
 }
+.circle {
+  height: 160px;
+  width: 160px;
+  border-radius: 50%;
+  position: absolute;
+  top: 123px;
+  left: 553px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 40px;
+  font-weight: bold;
+}
+.circle p {
+  font-size: 15px;
+  margin: 0 !important;
+}
+@keyframes rotate {
+  100% {
+    transform: rotate(1turn);
+  }
+}
+.rainbow {
+  z-index: 0;
+  overflow: hidden;
+}
+.rainbow::before {
+  content: "";
+  position: absolute;
+  z-index: -2;
+  left: -50%;
+  top: -60%;
+  width: 200%;
+  height: 350px;
+  background-color: #399953;
+  background-repeat: no-repeat;
+  background-size: 50% 50%, 50% 50%;
+  background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+  background-image: linear-gradient(#399953, #399953),
+    linear-gradient(#fbb300, #fbb300), linear-gradient(#d53e33, #d53e33),
+    linear-gradient(#377af5, #377af5);
+  animation: rotate 4s linear infinite;
+}
+.rainbow::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 9px;
+  top: 10px;
+  width: calc(100% - 20px);
+  height: calc(100% - 20px);
+  border-radius: 50%;
+  background: #d7f4fa;
+}
